--- a/boilerplate/index.html
+++ b/boilerplate/index.html
@@ -11,8 +11,7 @@
 </head>
 <body>
     <header>
-        <h1>Scroll Down to See the Popup</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis ratione necessitatibus facere deleniti quasi quibusdam omnis recusandae modi, sunt qui natus amet, molestiae numquam illum incidunt magni libero perferendis illo!</p>
+        <h1>Title Here</h1>
     </header>
     <main>
        <div class="container"></div>
