negative margin + flex

--- a/HTML/img-position.html
+++ b/HTML/img-position.html
@@ -33,7 +33,7 @@
         display: block;
       }
       .container {
-        width: 70%;
+        width: 50%;
         background-color: #000;
         overflow: hidden;
       }
@@ -45,7 +45,7 @@
         transition: all 0.3s ease;
       }
       .nature:hover {
-        opacity: 0.8;
+        opacity: 0.9;
         transform: scale(1.05);
       }
     </style>
@@ -53,7 +53,7 @@
   <body>
     <div class="container">
       <ul>
-        <li class="img-container">
+        <li class="img-container active">
           <h2 class="title">Nature</h2>
           <img
             class="nature"
