--- a/download-progress/index.html
+++ b/download-progress/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Progress Bar</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -14,10 +14,17 @@
   </head>
   <body>
     <header>
-      <h1>Title Here</h1>
+      <h1>Download Progress Bar</h1>
     </header>
     <main>
-      <div class="container"></div>
+      <div class="container">
+        <div class="download">
+          <div class="download-bar">
+            <div class="download-progress"></div>
+          </div>
+          <p class="progress-number"></p>
+        </div>
+      </div>
     </main>
     <footer>
       <div class="footer-container">
