--- a/sidebar/index.html
+++ b/sidebar/index.html
@@ -22,7 +22,7 @@
         <li>
           <div>
             <a href="#" class="bold">Chapters</a>
-            <a class="toggle-btn">
+            <a class="toggle-btn chapter-btn">
               <i class="fa-solid fa-angle-down" data-menu="chapter"></i>
             </a>
           </div>
@@ -74,7 +74,7 @@
         <li>
           <div>
             <a href="#" class="bold">Appendices</a>
-            <a class="toggle-btn">
+            <a class="toggle-btn appendix-btn">
               <i class="fa-solid fa-angle-down" data-menu="appendix"></i>
             </a>
           </div>
